--- a/styles.css
+++ b/styles.css
@@ -103,7 +103,6 @@ section:not(:first-child) {
 
 .header-container {
     height: 100%;
-    width: 50%;
     display: block;
     margin: 0 auto;
     color: black;
@@ -111,6 +110,7 @@ section:not(:first-child) {
 
 .header-logo {
     height: 100%;
+    padding-left: 10vw;
     display: table;
     float: left;
 }
@@ -129,6 +129,7 @@ section:not(:first-child) {
 
 .navbar {
     float: right;
+    padding-right: 10vw;
     height: 100%;
     display: table;
 }
@@ -257,7 +258,7 @@ section:not(:first-child) {
     text-align: center;
     height: 4rem;
     margin-bottom: 2rem;
-    font-size: 1.5rem;
+    font-size: var(--fs-500);
 }
 
 /* Section: Pick a package Styles */
